--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dayjs": "^1.11.3",
     "draft-convert": "^2.1.12",
     "draft-js": "^0.11.7",
+    "html-react-parser": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.14.7",
